docs: refocus README on end users, move dev setup to CONTRIBUTING
Split the two concerns that were mixed together:

- README is now purely end-user facing: what problem PCPanel solves and
  how, supported hardware, download/install per platform, migration, and
  where to get help. Adds a feature overview and screenshot placeholders.
- CONTRIBUTING is rewritten for the current Quarkus + Angular + GraalVM
  stack, replacing the stale JavaFX/jpackage/Wix/Liberica instructions.
  Absorbs the native-image / reachability-metadata notes from the README.
- docs/images/ holds a guide for the four planned screenshots.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>